updating take role to buttons